# banone

./: .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
banone/: __init__.py  dictionary.py  generator.py  lemma.py  main.py  sound.py
banone/dict/: de.yaml
tests/: conftest.py  test_generator.py  test_lemma.py  test_sound.py  utils.py
tests/data/: de.yaml
