[tool.poetry]
name = "banone"
version = "0.1.1"
description = "A generator for joke riddles that combine two words into a pun"
authors = ["Anett Seeker"]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
pre-commit = "^4.0"
pytest = "^8.0"
mypy = "^1.0"

[tool.poetry.scripts]
banone-run = "banone.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
